--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,14 @@ body {
   position: relative;
   background: transparent;
 }
+body{
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
 
 body::before {
   content: "";
